UY-1539 scope concretization using token exchange/refresh